Update the service contex.

--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   name: bal-sample-ingress
   annotations:
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
 spec:
@@ -10,7 +11,7 @@ spec:
   - host: "bal-sample"
     http:
       paths:
-      - path: /*
+      - path: /
         pathType: Prefix
         backend:
           service:
